# laboratornye

./: README.md
2 term/derivative/: CMakeLists.txt  main.cpp
2 term/derivative/include/: binary_search_tree.cpp  int_wrapper.h
2 term/lab1/src/: 1.cpp  10.cpp  4.cpp  6.cpp  programs.h
2 term/lab2/include/: template_demo.h
2 term/lab2/src/: bugint.cpp
3 term/CourseWork/: CourseWork.aux  CourseWork.out  CourseWork.tex  CourseWork.toc  titulCP.tex
3 term/database/: lab1.sql  lab2.sql
3 term/distributed systems/lab1/: 1number.c  2number.c  3number.c  analyzer  create_binary.py  test_commands.txt
3 term/distributed systems/lab2/: 2.3number.c  4number.c  a.out
3 term/distributed systems/lab3/: 1number.c  client.c  makefile  server.c
3 term/lab1/: 1number.c  2number.c  3number.c  a.out  data.txt  number.txt
3 term/math/: a.out  input  input.txt  lab1.cpp  lab2.cpp  lab3.cpp  test.txt
4 term/Arithmetic algorithm/homework1/: 1.c++  1.cpp  2.c++  2.cpp  3.c++  3.cpp  4.c++  4.cpp  5.c++  5.cpp  knut1.c++  knut1.cpp  knut16.c++  knut16.cpp  knut2.c++  knut2.cpp  knut3.c++  knut3.cpp  knut4.c++  knut4.cpp  knut8.c++  knut8.cpp  makefile
4 term/Arithmetic algorithm/homework10/: CMakeLists.txt  main.cpp  plot.py
4 term/Arithmetic algorithm/homework2/: GF2n.cpp  GF2n.hpp  number1.cpp  number2.cpp  number3.cpp  number5.cpp  program  task3  task4
4 term/Arithmetic algorithm/homework3/: 1.3.cpp  1.4.cpp  1.5.cpp  2.10.cpp  2.6.cpp  2.7.cpp  2.8.cpp  2.9.cpp  3.13.cpp
4 term/Probability theory/homework2/: 57Gmurman.cpp  58Gmurman.cpp  59Gmurman.cpp  61Gmurman.cpp  62Gmurman.cpp  63Gmurman.cpp  65Gmurman.cpp  67Gmurman.cpp  68Gmurman.cpp  69Gmurman.cpp  70Gmurman.cpp  Metod68.cpp  Metod69.cpp
4 term/Probability theory/homework3/number1/: CMakeLists.txt
4 term/Probability theory/homework3/number1/include/: cluster_analyzer.h  mainwindow.h
4 term/Probability theory/homework3/number1/src/: cluster_analyzer.cpp  main.cpp  mainwindow.cpp
4 term/Probability theory/homework3/number2/: CMakeLists.txt
4 term/Probability theory/homework3/number2/include/:  mainwindow2.h  mainwindow.h  tree_model.h
4 term/Probability theory/homework3/number2/src/: main.cpp  mainwindow.cpp  tree_model.cpp
4 term/Probability theory/homework3/number3/: CMakeLists.txt
4 term/Probability theory/homework3/number3/include/: assembler.h  factory.h  recycler.h
4 term/Probability theory/homework3/number3/src/: assembler.cpp  factory.cpp  main.cpp  quality_module.cpp  recycler.cpp
4 term/Сryptography/homework12/: ElGamal.cpp  (+7 more)
derivative/: main.cpp
derivative/include/: int_wrapper.h
derivative/src/: int_wrapper.cpp
lab1/: .clang-format
lab1/src/: 1.cpp  10.cpp  11.cpp  2.cpp  3.cpp  4.cpp  6.cpp  7.cpp  8.cpp  9.cpp  main.cpp  program
lab1/test/: encrypted.txt  input.txt
lab2/: CMakeLists.txt  main.cpp
lab2/include/: bugint.h  template_demo.h
lab2/src/: bugint.cpp  main.cpp
src/: lab1.cpp
src/lab1/: 1.cpp  4.cpp
(+73 files in other folders)
